#91: Configure module path for Spoon parser